vcluster_versioned_docs/version-0.21.0/_partials/config/controlPlane/backingStore.mdx

<details className="config-field" data-expandable="true">
<summary>

## `backingStore` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore}

BackingStore defines which backing store to use for virtual cluster. If not defined will use embedded database as a default backing store.

</summary>




<details className="config-field" data-expandable="true">
<summary>

### `etcd` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd}

Etcd defines that etcd should be used as the backend for the virtual cluster

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `embedded` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-embedded}

Embedded defines to use embedded etcd as a storage backend for the virtual cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-embedded-enabled}

Enabled defines if the embedded etcd should be used.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `migrateFromDeployedEtcd` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-embedded-migrateFromDeployedEtcd}

MigrateFromDeployedEtcd signals that vCluster should migrate from the deployed external etcd to embedded etcd.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `deploy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy}

Deploy defines to use an external etcd that is deployed by the helm chart

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-enabled}

Enabled defines that an external etcd should be deployed.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `statefulSet` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet}

StatefulSet holds options for the external etcd statefulSet.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-enabled}

Enabled defines if the statefulSet should be deployed

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `enableServiceLinks` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-enableServiceLinks}

EnableServiceLinks for the StatefulSet pod

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `image` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-image}

Image is the image to use for the external etcd statefulSet

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `registry` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">registry.k8s.io</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-image-registry}

Registry is the registry of the container image, e.g. my-registry.com or ghcr.io. This setting can be globally
overridden via the controlPlane.advanced.defaultImageRegistry option. Empty means docker hub.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `repository` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">etcd</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-image-repository}

Repository is the repository of the container image, e.g. my-repo/my-image

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `tag` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">3.5.13-0</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-image-tag}

Tag is the tag of the container image, e.g. latest

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `imagePullPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-imagePullPolicy}

ImagePullPolicy is the pull policy for the external etcd image

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `env` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-env}

Env are extra environment variables

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `extraArgs` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-extraArgs}

ExtraArgs are appended to the etcd command.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `resources` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-resources}

Resources the etcd can consume

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `limits` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-resources-limits}

Limits are resource limits for the container

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `requests` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;cpu:20m memory:150Mi&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-resources-requests}

Requests are minimal resources that will be consumed by the container

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `pods` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-pods}

Pods defines extra metadata for the etcd pods.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-pods-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-pods-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `highAvailability` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-highAvailability}

HighAvailability are high availability options

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `replicas` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">1</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-highAvailability-replicas}

Replicas are the amount of pods to use.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `scheduling` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-scheduling}

Scheduling options for the etcd pods.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `nodeSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-scheduling-nodeSelector}

NodeSelector is the node selector to apply to the pod.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `affinity` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-scheduling-affinity}

Affinity is the affinity to apply to the pod.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `tolerations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-scheduling-tolerations}

Tolerations are the tolerations to apply to the pod.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `priorityClassName` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-scheduling-priorityClassName}

PriorityClassName is the priority class name for the the pod.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `podManagementPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">Parallel</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-scheduling-podManagementPolicy}

PodManagementPolicy is the statefulSet pod management policy.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `topologySpreadConstraints` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-scheduling-topologySpreadConstraints}

TopologySpreadConstraints are the topology spread constraints for the pod.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `security` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-security}

Security options for the etcd pods.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `podSecurityContext` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-security-podSecurityContext}

PodSecurityContext specifies security context options on the pod level.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `containerSecurityContext` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-security-containerSecurityContext}

ContainerSecurityContext specifies security context options on the container level.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `persistence` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence}

Persistence options for the etcd pods.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `volumeClaim` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-volumeClaim}

VolumeClaim can be used to configure the persistent volume claim.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-volumeClaim-enabled}

Enabled enables deploying a persistent volume claim.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `accessModes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;ReadWriteOnce&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-volumeClaim-accessModes}

AccessModes are the persistent volume claim access modes.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `retentionPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">Retain</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-volumeClaim-retentionPolicy}

RetentionPolicy is the persistent volume claim retention policy.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `size` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">5Gi</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-volumeClaim-size}

Size is the persistent volume claim storage size.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `storageClass` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-volumeClaim-storageClass}

StorageClass is the persistent volume claim storage class.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `volumeClaimTemplates` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-volumeClaimTemplates}

VolumeClaimTemplates defines the volumeClaimTemplates for the statefulSet

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `addVolumes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-addVolumes}

AddVolumes defines extra volumes for the pod

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `addVolumeMounts` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-addVolumeMounts}

AddVolumeMounts defines extra volume mounts for the container

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-addVolumeMounts-name}

This must match the Name of a Volume.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `readOnly` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-addVolumeMounts-readOnly}

Mounted read-only if true, read-write otherwise (false or unspecified).
Defaults to false.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `mountPath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-addVolumeMounts-mountPath}

Path within the container at which the volume should be mounted.  Must
not contain ':'.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `subPath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-addVolumeMounts-subPath}

Path within the volume from which the container's volume should be mounted.
Defaults to "" (volume's root).

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `mountPropagation` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-addVolumeMounts-mountPropagation}

mountPropagation determines how mounts are propagated from the host
to container and the other way around.
When not set, MountPropagationNone is used.
This field is beta in 1.10.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `subPathExpr` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-persistence-addVolumeMounts-subPathExpr}

Expanded path within the volume from which the container's volume should be mounted.
Behaves similarly to SubPath but environment variable references $(VAR_NAME) are expanded using the container's environment.
Defaults to "" (volume's root).
SubPathExpr and SubPath are mutually exclusive.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-statefulSet-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `service` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-service}

Service holds options for the external etcd service.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-service-enabled}

Enabled defines if the etcd service should be deployed

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-service-annotations}

Annotations are extra annotations for the external etcd service

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `headlessService` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-headlessService}

HeadlessService holds options for the external etcd headless service.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-headlessService-enabled}

Enabled defines if the etcd headless service should be deployed

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-etcd-deploy-headlessService-annotations}

Annotations are extra annotations for the external etcd headless service

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `database` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database}

Database defines that a database backend should be used as the backend for the virtual cluster. This uses a project called kine under the hood which is a shim for bridging Kubernetes and relational databases.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `embedded` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-embedded}

Embedded defines that an embedded database (sqlite) should be used as the backend for the virtual cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-embedded-enabled}

Enabled defines if the database should be used.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `dataSource` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-embedded-dataSource}

DataSource is the kine dataSource to use for the database. This depends on the database format.
This is optional for the embedded database. Examples:
* mysql: mysql://username:password@tcp(hostname:3306)/k3s
* postgres: postgres://username:password@hostname:5432/k3s

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `keyFile` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-embedded-keyFile}

KeyFile is the key file to use for the database. This is optional.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `certFile` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-embedded-certFile}

CertFile is the cert file to use for the database. This is optional.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `caFile` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-embedded-caFile}

CaFile is the ca file to use for the database. This is optional.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `external` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-external}

External defines that an external database should be used as the backend for the virtual cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-external-enabled}

Enabled defines if the database should be used.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `dataSource` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-external-dataSource}

DataSource is the kine dataSource to use for the database. This depends on the database format.
This is optional for the embedded database. Examples:
* mysql: mysql://username:password@tcp(hostname:3306)/k3s
* postgres: postgres://username:password@hostname:5432/k3s

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `keyFile` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-external-keyFile}

KeyFile is the key file to use for the database. This is optional.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `certFile` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-external-certFile}

CertFile is the cert file to use for the database. This is optional.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `caFile` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-external-caFile}

CaFile is the ca file to use for the database. This is optional.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `connector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#backingStore-database-external-connector}

Connector specifies a secret located in a connected vCluster Platform that contains database server connection information
to be used by Platform to create a database and database user for the vCluster.
and non-privileged user. A kine endpoint should be created using the database and user on Platform registration.
This is optional.

</summary>



</details>


</details>


</details>


</details>
